GTK 3.20/3.22:fix calendar grid alignment

--- a/UbuntuStudio_Legacy/gtk-3.20/gtk-widgets.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/gtk-widgets.css
@@ -2442,7 +2442,7 @@ calendar{
 	background-image: -gtk-scaled(url("assets/calendar_grid.svg"));
 	background-repeat: no-repeat;
 	background-position: top right;
-	padding: 6px 5px 1px 4px;
+	padding: 4px 4px 4px 1px;
 	font-stretch: Condensed;
 	font-size: 120%;
 }
