--- a/UbuntuStudio_Legacy/gtk-3.20/panel.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/panel.css
@@ -243,7 +243,7 @@ window#MatePanelPopupWindow calendar{
 	background-image: -gtk-scaled(url("assets/calendar_grid.svg"));
 	background-repeat: no-repeat;
 	background-position: right top;
-	padding: 6px 4px 1px 5px;
+	padding: 4px 4px 4px 1px;
 	font-stretch: Condensed;
 	font-size: 120%;
 }
